# project-ult-subsystem-sdk

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: PROGRESS.md  TASK_BREAKDOWN.md  subsystem-sdk.project-doc.md
subsystem_sdk/: __init__.py  _contracts.py  _json.py  public.py
subsystem_sdk/backends/: __init__.py  config.py  factory.py  full_kafka.py  heartbeat.py  lite_pg.py  mock.py
subsystem_sdk/base/: __init__.py  config.py  context.py  registration.py  runtime.py  scaffold.py  subsystem.py
subsystem_sdk/fixtures/: __init__.py  bundle.py  loader.py
subsystem_sdk/fixtures/data/ex0/: default.json
subsystem_sdk/fixtures/data/ex1/: default.json
subsystem_sdk/fixtures/data/ex2/: default.json
subsystem_sdk/fixtures/data/ex3/: default.json
subsystem_sdk/fixtures/templates/reference_subsystem/: README.md.template  pyproject.toml.template  registration.json.template
subsystem_sdk/fixtures/templates/reference_subsystem/<package>/: __init__.py.template  handlers.py.template  runtime.py.template  smoke.py.template
subsystem_sdk/heartbeat/: __init__.py  client.py  payload.py  policy.py  protocol.py
subsystem_sdk/submit/: __init__.py  _dispatch.py  client.py  protocol.py  receipt.py
subsystem_sdk/testing/: __init__.py  helpers.py  mock_backend.py
subsystem_sdk/validate/: __init__.py  engine.py  entity_registry.py  preflight.py  registry.py  report.py  result.py  semantics.py
tests/: __init__.py  conftest.py  test_contracts_boundary.py  test_package_layout.py
tests/backends/: __init__.py  test_factory.py  test_full_kafka.py  test_lite_pg_backend.py  test_lite_pg_heartbeat_backend.py  test_mock_backend.py
tests/base/: __init__.py  test_base_integration.py  test_config.py  test_context.py  test_registration.py  test_runtime.py  test_scaffold.py  test_subsystem.py
tests/boundary/: test_red_lines.py
tests/contract/: test_contracts_alignment.py  test_runtime_contract.py
tests/fixtures/: __init__.py  test_bundle.py  test_contract_roundtrip.py  test_contract_roundtrip_real.py  test_loader.py
tests/heartbeat/: __init__.py  test_client.py  test_payload.py  test_policy.py
tests/integration/: test_backend_switch.py  test_p4_core_vertical_slice.py  test_reference_subsystem.py
tests/regression/: test_with_shared_fixtures.py
tests/smoke/: test_public_smoke.py
tests/submit/: __init__.py  test_backend_receipt_normalization.py  test_client.py  test_client_preflight.py  test_dispatch.py  test_receipt.py
tests/testing/: test_helpers.py  test_mock_backend.py
tests/unit/: test_public_entrypoints.py
tests/validate/: __init__.py  test_contracts_gateway.py  test_engine.py  test_entity_registry_wiring.py  test_ex0_semantics.py  test_preflight.py  test_producer_only.py  test_registry.py  test_report.py  test_result.py
