[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-ult-subsystem-sdk"
version = "0.1.0"
description = "Scaffold workspace for subsystem-sdk."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
]

[tool.setuptools.packages.find]
include = ["subsystem_sdk*"]

[tool.setuptools.package-data]
"subsystem_sdk.fixtures" = [
    "data/*/*.json",
    "templates/reference_subsystem/*.template",
    "templates/reference_subsystem/<package>/*.template",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
