[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-ult-subsystem-sdk"
version = "0.1.2"
description = "Unified producer SDK (submit / send_heartbeat / validate_payload) for project-ult subsystems."
readme = "README.md"
# Capped at <3.13 for stage-2 plan parity with orchestrator/dagster wheels and
# assembly e2e — every module's clean-venv verification uses python3.12.
requires-python = ">=3.11,<3.13"
dependencies = [
    "pydantic>=2.6",
    # v0.1.3 adds optional producer_context extension slot + Ex1.evidence
    # + relaxes Ex2.affected_sectors list min_length=1; required by the
    # canonical mapper pattern downstream subsystems (announcement / news)
    # use to reconcile their local candidate models with contracts.Ex*.
    "project-ult-contracts>=0.1.3",
]

[project.optional-dependencies]
# Stage-2 plan iron rule #3 split:
# - dev: offline-first pure-pip (test-fast / smoke lanes use only this).
# - contracts-schemas: cross-repo source-of-truth pin (contract lane).
# - shared-fixtures: real audit-eval fixtures (regression lane).
# Pre-existing `test` extra preserved for backwards-compatibility with
# `pip install -e ".[test]"` callers.
dev = [
    "pytest>=8",
]
test = [
    "pytest>=8",
]
contracts-schemas = [
    "project-ult-contracts @ git+https://github.com/shenfanjie5-bit/project-ult-contracts.git@v0.1.3",
]
shared-fixtures = [
    # Pinned to v0.2.4 (project-wide canonical_entity_id format
    # reconciliation: every shared case now uses the runtime-aligned
    # dot form ENT_STOCK_<symbol>.<exchange>).
    "project-ult-audit-eval @ git+https://github.com/shenfanjie5-bit/project-ult-audit-eval.git@v0.2.4",
]

[tool.setuptools.packages.find]
include = ["subsystem_sdk*"]

[tool.setuptools.package-data]
"subsystem_sdk.fixtures" = [
    "data/*/*.json",
    "templates/reference_subsystem/*.template",
    "templates/reference_subsystem/<package>/*.template",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
